fix(review): revert `z-index` for Select__el

--- a/src/components/Select/Select.css
+++ b/src/components/Select/Select.css
@@ -14,6 +14,7 @@
   width: 100%;
   height: 100%;
   opacity: 0;
+  z-index: 7;
   font-size: var(--vkui--font_text--font_size--regular);
 }
 
